<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/marginLarge"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/locale"
        style="@style/myButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="@dimen/marginSmall"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/locale"
        app:layout_constraintEnd_toStartOf="@id/uninstall"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tax" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/principle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/input"
        app:layout_constraintEnd_toStartOf="@+id/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/input" />

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/rateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/initialRate"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <SeekBar
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:max="200"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rateView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/loan"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate" />

    <RadioGroup
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <RadioButton
            android:id="@+id/radio15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radios"
            android:checked="true"
            android:text="@string/radio15" />

        <RadioButton
            android:id="@+id/radio20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radios"
            android:text="@string/radio20" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/radios"
            android:text="@string/radio30" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/tax"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms" />

    <Button
        android:id="@+id/cal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginEnd="@dimen/marginSmall"
        style="@style/myButton"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/calc"
        app:layout_constraintEnd_toStartOf="@id/uninstall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tax" />

    <Button
        android:id="@+id/uninstall"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:drawableStart="@android:drawable/ic_menu_delete"
        android:drawableTint="@color/myColor"
        android:onClick="onClick"
        android:text="@string/unin"
        android:textColor="@color/myColor"
        app:layout_constraintBottom_toBottomOf="@id/cal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cal"
        app:layout_constraintTop_toTopOf="@id/cal" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:text="@string/prompt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cal" />


</androidx.constraintlayout.widget.ConstraintLayout>